# trs

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
example/: EXAMPLE.md
example/project a/: resources.trc
example/project a/res-debug/: debug.txt
example/project b/: somenamehere.trc
example/project b/subproject c/: resources.trc
